--- a/perfil.html
+++ b/perfil.html
@@ -1,161 +1,136 @@
-```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi Perfil - Cancha360</title>
+  <title>Perfil - Cancha360</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .avatar {
-      width: 120px;
-      height: 120px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
       object-fit: cover;
-      border: 2px solid #ccc;
     }
   </style>
 </head>
 <body>
   <div class="container mt-4">
-    <h2>👤 Mi Perfil</h2>
-    <a href="dashboard.html" class="btn btn-secondary mb-3">⬅️ Volver al Dashboard</a>
+    <h1>Tu Perfil 👤</h1>
 
-    <div class="card p-4">
-      <div class="text-center mb-3">
-        <img id="user-avatar" src="https://via.placeholder.com/120" alt="Avatar" class="avatar mb-2">
-        <div>
-          <input type="file" id="avatar-input" accept="image/png" class="form-control mt-2">
-          <button id="btn-subir-avatar" class="btn btn-primary mt-2">Cambiar Avatar</button>
-        </div>
-        <p class="text-danger small">* Solo imágenes .png</p>
-      </div>
-
-      <form id="perfil-form">
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" id="nombre" class="form-control" required>
-        </div>
-        <div class="mb-3">
-          <label for="telefono" class="form-label">Teléfono</label>
-          <input type="text" id="telefono" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-success">Guardar cambios</button>
-      </form>
+    <!-- Avatar -->
+    <div class="mb-3">
+      <img id="avatar-preview" src="https://via.placeholder.com/100" alt="Avatar" class="avatar mb-2">
+      <input type="file" id="avatar-input" accept="image/png" class="form-control">
     </div>
+
+    <!-- Nombre -->
+    <div class="mb-3">
+      <label for="nombre" class="form-label">Nombre</label>
+      <input type="text" id="nombre" class="form-control">
+    </div>
+
+    <!-- Teléfono -->
+    <div class="mb-3">
+      <label for="telefono" class="form-label">Teléfono</label>
+      <input type="text" id="telefono" class="form-control">
+    </div>
+
+    <button id="guardar" class="btn btn-success">Guardar cambios</button>
+    <a href="dashboard.html" class="btn btn-secondary">Volver al Dashboard</a>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
   const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4"; 
   const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
   let currentUser = null;
+  let userData = null; // cacheamos lo que existe en usuarios
+  let avatarFile = null;
 
-  async function loadProfile() {
+  async function cargarPerfil() {
     const { data: { session } } = await supabase.auth.getSession();
-
     if (!session) {
       window.location.href = "login.html";
       return;
     }
-
     currentUser = session.user;
 
-    // Traer datos de tabla usuarios
-    const { data: userData, error } = await supabase
+    // Obtener datos del usuario desde la tabla usuarios
+    const { data, error } = await supabase
       .from("usuarios")
       .select("nombre, telefono, avatar_url")
       .eq("id", currentUser.id)
       .single();
 
     if (error) {
-      console.error("Error cargando perfil:", error.message);
+      console.warn("No se encontró usuario en tabla 'usuarios':", error.message);
+      return;
     }
 
+    userData = data;
+
+    // Precargar nombre y teléfono
     document.getElementById("nombre").value = userData?.nombre || "";
     document.getElementById("telefono").value = userData?.telefono || "";
 
-    // Avatar con fallback
-    let avatarUrl = "https://via.placeholder.com/120?text=👤";
-    if (userData?.avatar_url) {
-      avatarUrl = userData.avatar_url;
-    } else if (currentUser.user_metadata?.avatar_url) {
-      avatarUrl = currentUser.user_metadata.avatar_url;
-    }
-    document.getElementById("user-avatar").src = avatarUrl;
+    // Precargar avatar
+    document.getElementById("avatar-preview").src =
+      userData?.avatar_url || currentUser.user_metadata?.avatar_url || "https://via.placeholder.com/100";
   }
 
-  // Guardar cambios en nombre y teléfono
-  document.getElementById("perfil-form").addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    const nombre = document.getElementById("nombre").value;
-    const telefono = document.getElementById("telefono").value;
-
-    const { error } = await supabase
-      .from("usuarios")
-      .upsert({
-        id: currentUser.id,
-        nombre,
-        telefono
-      });
-
-    if (error) {
-      alert("❌ Error al guardar: " + error.message);
-    } else {
-      alert("✅ Perfil actualizado");
+  // Previsualizar avatar al seleccionar archivo
+  document.getElementById("avatar-input").addEventListener("change", (e) => {
+    avatarFile = e.target.files[0];
+    if (avatarFile) {
+      document.getElementById("avatar-preview").src = URL.createObjectURL(avatarFile);
     }
   });
 
-  // Subir nuevo avatar
-  document.getElementById("btn-subir-avatar").addEventListener("click", async () => {
-    const fileInput = document.getElementById("avatar-input").files[0];
-    if (!fileInput) {
-      alert("⚠️ Selecciona un archivo .png primero");
-      return;
+  // Guardar cambios
+  document.getElementById("guardar").addEventListener("click", async () => {
+    const nombre = document.getElementById("nombre").value || userData?.nombre || "";
+    const telefono = document.getElementById("telefono").value || userData?.telefono || "";
+    let avatarUrl = userData?.avatar_url || currentUser.user_metadata?.avatar_url || null;
+
+    // Si se subió un archivo nuevo, subirlo a storage
+    if (avatarFile) {
+      const filePath = `avatars/${currentUser.id}.png`;
+      const { error: uploadError } = await supabase.storage
+        .from("avatars")
+        .upload(filePath, avatarFile, { upsert: true });
+
+      if (uploadError) {
+        alert("❌ Error al subir avatar: " + uploadError.message);
+        return;
+      }
+
+      // Obtener URL pública
+      const { data } = supabase.storage.from("avatars").getPublicUrl(filePath);
+      avatarUrl = data.publicUrl;
     }
 
-    if (!fileInput.name.endsWith(".png")) {
-      alert("⚠️ Solo se permiten archivos .png");
-      return;
-    }
-
-    const filePath = `public/${currentUser.id}.png`;
-
-    const { error: uploadError } = await supabase.storage
-      .from("avatars")
-      .upload(filePath, fileInput, { upsert: true });
-
-    if (uploadError) {
-      alert("❌ Error al subir: " + uploadError.message);
-      return;
-    }
-
-    // Obtener URL pública
-    const { data: publicUrl } = supabase.storage
-      .from("avatars")
-      .getPublicUrl(filePath);
-
-    // Guardar URL en la tabla usuarios
+    // Actualizar fila en tabla usuarios
     const { error: updateError } = await supabase
       .from("usuarios")
-      .upsert({
-        id: currentUser.id,
-        avatar_url: publicUrl.publicUrl
-      });
+      .update({
+        nombre,
+        telefono,
+        avatar_url: avatarUrl
+      })
+      .eq("id", currentUser.id);
 
     if (updateError) {
-      alert("❌ Error al actualizar avatar: " + updateError.message);
+      alert("❌ Error al actualizar perfil: " + updateError.message);
     } else {
-      document.getElementById("user-avatar").src = publicUrl.publicUrl;
-      alert("✅ Avatar actualizado correctamente");
+      alert("✅ Perfil actualizado correctamente");
+      window.location.href = "dashboard.html";
     }
   });
 
-  loadProfile();
+  cargarPerfil();
   </script>
 </body>
 </html>
-```
